force-app/main/default/objects/ProductDiscountCriteria__c/ProductDiscountCriteria__c.object-meta.xml
<CustomObject>
    <description>Datatable used to allow several different matching criteria for each applicable Product Discount</description>
    <label>Product Discount Criteria</label>
    <nameField>
        <label>Field API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products Discount Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>