force-app/main/default/objects/ProductDiscountCriteria__c/fields/FieldValue__c.field-meta.xml
<CustomField>
    <fullName>FieldValue__c</fullName>
    <description>Value that needs to be equal on the quote field</description>
    <label>Field Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>