force-app/main/default/objects/ProductDiscountCriteria__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this criteria is active or not</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>