force-app/main/default/objects/ProductDiscountCriteria__c/fields/ProductDiscount__c.field-meta.xml
<CustomField>
    <fullName>ProductDiscount__c</fullName>
    <description>Discount to apply this criteria</description>
    <label>Product Discount</label>
    <referenceTo>ProductDiscount__c</referenceTo>
    <relationshipLabel>Products Discount Criteria</relationshipLabel>
    <relationshipName>ProductsDiscountCriteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>