force-app/main/default/objects/ProductDiscountCriteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FieldValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>